--- a/client/src/components/ChatList.css
+++ b/client/src/components/ChatList.css
@@ -71,6 +71,13 @@
     box-shadow: 0 4px 15px rgba(102, 126, 234, 0.25);
 }
 
+.chat-item-avatar .avatar-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .online-indicator {
     position: absolute;
     bottom: 2px;
