--- a/client/src/components/ChatWindow.css
+++ b/client/src/components/ChatWindow.css
@@ -57,6 +57,13 @@
     flex-shrink: 0;
 }
 
+.chat-header-avatar .avatar-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .chat-header-info {
     flex: 1;
     min-width: 0;
